fix dark mode

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -5,7 +5,9 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
+  color: #213547;
   background-color: #242424;
+  background-color: #ffffff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -56,6 +58,8 @@ button {
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
+  background-color: #f9f9f9;
+
   cursor: pointer;
   transition: border-color 0.25s;
 }
